[package]
name = "hashdir"
version = "0.2.0"
authors = ["Francois Best <francois@francoisbest.com>"]
description = "Generate a cryptographic view of a directory's contents"
repository = "https://github.com/47ng/hashdir"
documentation = "https://docs.rs/hashdir"
readme = "readme.md"
license = "MIT"
edition = "2018"

[dependencies]
serde = "1.0.88"
serde_json = "1.0.38"
serde_derive = "1.0.88"
sha2 = "0.8.0"
custom_error = "1.4.0"
base64 = "0.10.1"
